add feature draw direction two point, search nearby gas station and move marker but need test (5/10/2020) and improve logic and ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">CheapGasStation</string>
 
-    <string name="google_map_key"></string>
+    <string name="google_map_key_1"></string>
 </resources>
