--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">CheapGasStation</string>
 
-    <string name="google_map_key_1"></string>
+    <string name="google_map_key_1">AIzaSyBP8cODYx872X1l-6jqxTjLClHXdIoAUi4</string>
 </resources>
